--- a/lists/markdown-editor/package.json
+++ b/lists/markdown-editor/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-remarkable": "^1.1.3",
     "react-scripts": "3.4.3",
     "remarkable-react": "^1.4.3"
   },
