--- a/prototypes/quiz-app/package.json
+++ b/prototypes/quiz-app/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    // "react": "^16.8.0",
+    // "react-dom": "^16.8.0",
     "react-scripts": "4.0.0",
     "underscore": "^1.11.0"
   },
